# scim-prime

./: AUTHORS  ChangeLog  NEWS  README  TODO  configure.ac
data/: Makefile.am
m4/: Makefile.in
po/: Makevars  POTFILES.in  ja.po  scim-prime.pot
skim/: AUTHORS  ChangeLog  NEWS  README  configure.in.in
skim/icons/: .cvsignore  Makefile.am
skim/po/: ja.po  skim-scim-prime.pot
skim/setupui/: .cvsignore  Makefile.am  prime.kcfg  prime.kcfgc  primeui.ui  scimprimesettingplugin.cpp  scimprimesettingplugin.h  skimplugin_scim_prime_config.desktop
src/: Makefile.am  prime_commands.h  prime_connection.cpp  prime_connection.h  prime_session.cpp  prime_session.h  scim_prime_action.cpp  scim_prime_action.h  scim_prime_imengine.cpp  scim_prime_imengine.h  scim_prime_imengine_factory.cpp  scim_prime_imengine_factory.h  scim_prime_imengine_setup.cpp  scim_prime_prefs.cpp  scim_prime_prefs.h
